fix: gap between contentWrapper and avatar

--- a/app/[userID]/(User)/mobile/info/Info.module.scss
+++ b/app/[userID]/(User)/mobile/info/Info.module.scss
@@ -70,7 +70,7 @@ $badge-height: 1.3rem;
 .contentWrapper {
   height: auto;
   position: relative;
-  padding: calc($avatar-height / 2) $margin $margin $margin;
+  padding: calc($avatar-height / 1.8) $margin $margin $margin;
 
   display: flex;
   flex-direction: column;
